--- a/list-grade.css
+++ b/list-grade.css
@@ -5,7 +5,6 @@
 
 #app{
     width:600px;
-    border: 1px solid #ccc;
     margin: 0 auto;
     padding: 10px;
 }
@@ -57,11 +56,6 @@
 
 }
 
-
-
-
-
-
 .list{
 
 }
@@ -69,20 +63,31 @@
 
 .list .box{
     box-sizing: border-box;
-    padding: 10px 40px 10px 10px;
+    padding: 10px 20px 10px 10px;
     width: 480px;
     margin: 10px 0;
     border-bottom: 1px solid #cccccc;
     overflow: hidden;
 }
 
+.list a{
+    float: left;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 170px;
+    height: 150px;
+}
+
 .list .box img{
-    width: 100px;
+    width: 310px;
+    position: absolute;
+    left:-70px ;
 }
 
 .list .box p{
-    display:inline-block;
-    width: 320px;
+    display:block;
+    width: 260px;
     float: right;
     font-size: 15px;
     line-height: 15px;
